# mapcast-public

./: .gitignore  LICENSE  README.md
mapcast-cron/: README.md  package-lock.json  package.json  wrangler.toml.example
mapcast-cron/src/: index.ts
mapcast-data/: README.md  get_h3_from_countries.ipynb  get_overture_countries.sql  get_overture_regions.sql  pyproject.toml
mapcast-index/: README.md  package-lock.json  package.json  tailwind.config.js
mapcast-index/public/: index.html  manifest.json  simplified-fixed-colo.geojson
mapcast-index/src/: App.css  App.js  index.js
mapcast-index/src/components/: Accordian.js  Filters.js  Header.js  MapComponent.js  RecentClaims.js  ScoresTable.js
mapcast-index/src/pages/: About.js  Main.js  NotFound.js  Territory.js  User.js
mapcast-query/: Dockerfile  README.md  docker-compose.yml  pyproject.toml  secrets.env.example
mapcast-query/mapcastq/: main.py
mapcast-worker/: README.md  package-lock.json  package.json  schema.sql  wrangler.toml.example
mapcast-worker/src/: index.ts
