[tool.poetry]
name = "mapcast-data"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
jupyterlab = "^4.2.2"
polars = "^0.20.31"
h3ronpy = "^0.20.2"
h3 = "4.0.0b3"
geopandas = "^0.14.4"
matplotlib = "^3.9.0"
shapely = "^2.0.4"
sqlalchemy = "^2.0.31"
duckdb = "^1.0.0"
memory-profiler = "^0.61.0"
boto3 = "^1.34.139"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
